// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SharedUser should render a default shared-user avatar 1`] = `
<div
  class="avatar four"
>
  <span
    alt="shared-user"
    aria-hidden="false"
    aria-label="shared-user"
    class="icon shared-user"
    role="img"
  />
</div>
`;

exports[`SharedUser should render a shared-user avatar with aria hidden 1`] = `
<div
  class="avatar four"
>
  <span
    alt="shared-user"
    aria-hidden="true"
    aria-label="shared-user"
    class="icon shared-user"
    role="img"
  />
</div>
`;

exports[`SharedUser should render a shared-user avatar with color variant one 1`] = `
<div
  class="avatar one"
>
  <span
    alt="shared-user"
    aria-hidden="false"
    aria-label="shared-user"
    class="icon shared-user"
    role="img"
  />
</div>
`;

exports[`SharedUser should render a shared-user avatar with custom props 1`] = `
<div
  class="avatar four"
  id="custom props shared user"
>
  <span
    alt="shared-user"
    aria-hidden="false"
    aria-label="shared-user"
    class="icon shared-user"
    role="img"
  />
</div>
`;

exports[`SharedUser should render a shared-user avatar with provided size 1`] = `
<div
  class="avatar four"
  style="font-size:5em"
>
  <span
    alt="shared-user"
    aria-hidden="false"
    aria-label="shared-user"
    class="icon shared-user"
    role="img"
  />
</div>
`;

exports[`SharedUser should render a shared-user with an automated color variant, based on a hashValue 1`] = `
<div
  class="avatar two"
>
  <span
    alt="shared-user"
    aria-hidden="false"
    aria-label="shared-user"
    class="icon shared-user"
    role="img"
  />
</div>
`;

exports[`SharedUser should render a shared-user with color variant neutral 1`] = `
<div
  class="avatar neutral"
>
  <span
    alt="shared-user"
    aria-hidden="false"
    aria-label="shared-user"
    class="icon shared-user"
    role="img"
  />
</div>
`;
